--- a/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
+++ b/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
@@ -282,6 +282,6 @@
   
   
   <!-- <button class="btn btn-rounded btn btn-success m-0" types="button" (click)="pedirModificacionOrden()">Modificar Orden</button>-->
-  <!--<button (click)="generarPDF()"> GENERAR PDF</button>  -->
+  <button (click)="generarPDF()"> GENERAR PDF</button> 
 
 </div>
