vista orden viajes

--- a/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.css
+++ b/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.css
@@ -62,5 +62,14 @@ select:hover{
 }
 
 .espacioIzq{
+  padding-left: 30%;
+}
+
+.espacioIzq2{
   padding-left: 15%;
+}
+
+.itinerario {
+  margin-left: 30%;
+  margin-top: 15px;
 }
