--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -79,7 +79,7 @@
               <td>{{aceptadas[getOrdenPagindoIndex(a, paginaActualA)].concepto}}</td>
               <td>{{aceptadas[getOrdenPagindoIndex(a, paginaActualA)].acronimo}}</td>
               <td>
-                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', listaIP[getOrdenPagindoIndex(i, paginaActualIP)].id]">
+                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', aceptadas[getOrdenPagindoIndex(i, paginaActualA)].id]">
               </td>
           </tr>
           <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
