--- a/src/app/components/vistaProyectos/proyectos.component.css
+++ b/src/app/components/vistaProyectos/proyectos.component.css
@@ -5,3 +5,10 @@
     vertical-align: top;
     border-top: 1px solid #dee2e6;
   }
+
+  .icon{
+    width: 60%;
+    min-width: 24px;
+    max-width: 24px;
+    padding-top: 0px;
+  }
