--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.css
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.css
@@ -3,7 +3,11 @@
     min-width: 16px;
     max-width: 20px; 
 }
-
+.icon2{
+    width: 60%;
+    min-width: 16px;
+    max-width: 16px; 
+}
 
 .table td, .table th {
     padding: .5rem;
